# Limnova

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
DevTool/: CMakeLists.txt  Dev2D.cpp  Dev2D.h  DevTool.cpp  OrbitSystem2D.cpp  OrbitSystem2D.h  Orbiter.cpp  Orbiter.h  Orbiters2D.cpp  Orbiters2D.h
DevTool/Entities/: Entity.h  OrbitalEntity.cpp  OrbitalEntity.h  Orbiter.cpp  Orbiter.h
DevTool/assets/shaders/: AttrColor.glsl  Ellipse.lvglsl  FlatColor.lvglsl  Hyperbola.lvglsl  Texture.glsl  Texture.lvglsl
Limnova/: CMakeLists.txt  Limnova.h
Limnova/assets/cache/shader/opengl/: Orbital_Ellipse.lvglsl.cached_opengl.frag  Orbital_Ellipse.lvglsl.cached_opengl.vert  Orbital_Ellipse.lvglsl.cached_vulkan.frag  Orbital_Ellipse.lvglsl.cached_vulkan.vert  Orbital_Hyperbola.lvglsl.cached_opengl.frag  Orbital_Hyperbola.lvglsl.cached_vulkan.frag  Orbital_Hyperbola.lvglsl.cached_vulkan.vert  Renderer2D_Circle.lvglsl.cached_opengl.frag  Renderer2D_Circle.lvglsl.cached_opengl.vert  Renderer2D_Circle.lvglsl.cached_vulkan.frag  Renderer2D_Circle.lvglsl.cached_vulkan.vert  Renderer2D_Line.lvglsl.cached_opengl.frag  Renderer2D_Line.lvglsl.cached_opengl.vert  Renderer2D_Line.lvglsl.cached_vulkan.frag  Renderer2D_Line.lvglsl.cached_vulkan.vert  Renderer2D_Quad.lvglsl.cached_opengl.frag  Renderer2D_Quad.lvglsl.cached_opengl.vert  Renderer2D_Quad.lvglsl.cached_vulkan.frag  Renderer2D_Quad.lvglsl.cached_vulkan.vert
Limnova/assets/shaders/: Orbital_Ellipse.lvglsl  Orbital_Hyperbola.lvglsl  Renderer2D_Circle.lvglsl  Renderer2D_Ellipse.lvglsl  Renderer2D_Line.lvglsl  Renderer2D_Quad.lvglsl
Limnova/src/: Application.cpp  Application.h  CameraController.cpp  CameraController.h  Core.h  Core.h.in  EntryPoint.h  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  PerspectiveCameraController.cpp  PerspectiveCameraController.h  PointCameraController.cpp  PointCameraController.h  Window.h
Limnova/src/Core/: Application.cpp  Application.h  Core.h  Core.h.in  EntryPoint.h  Input.h  KeyCodes.h  Layer.h  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  Timer.h  Timestep.h  Typedefs.h  UUID.cpp  UUID.h  Window.h
Limnova/src/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Limnova/src/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Limnova/src/Math/: BigFloat.cpp  BigFloat.h  BigVector2.cpp  BigVector2.h  Math.cpp  Math.h  MathConstants.h  Matrix4.cpp  Matrix4.h  Quaternion.cpp  Quaternion.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h  glm.h
Limnova/src/Orbital/: OrbitalPhysics.h  OrbitalScene.cpp  OrbitalScene.h
Limnova/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Limnova/src/Platform/Vulkan/: VulkanContext.cpp  VulkanContext.h  vkinit.cpp  vkinit.h  vktostring.cpp  vktostring.h
Limnova/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsUtils.cpp  WindowsWindow.cpp  WindowsWindow.h
Limnova/src/Profiling/: Instrumentor.h
Limnova/src/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  EditorCamera.cpp  EditorCamera.h  Framebuffer.cpp  Framebuffer.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  PlanarCameraController.cpp  PlanarCameraController.h  PointCamera.cpp  PointCamera.h  PointCameraController.cpp  PointCameraController.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  RenderingContext.h  Shader.cpp  Shader.h  SubTexture.cpp  SubTexture.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Limnova/src/Scene/: Components.cpp  Components.h  Entity.cpp  Entity.h  Reflection.cpp  Reflection.h  Scene.cpp  Scene.h  SceneSerializer.cpp  SceneSerializer.h  Script.h
Limnova/src/Scripting/: ScriptEngine.cpp  ScriptEngine.h  ScriptLibrary.cpp  ScriptLibrary.h
Limnova/src/Structures/: Queue.h
Limnova/src/Utils/: InputUtils.cpp  InputUtils.h  PlatformUtils.h
LimnovaEditor/: CMakeLists.txt  Config.h  Config.h.in  EditorLayer.cpp  EditorLayer.h  LimnovaEditorApp.cpp
LimnovaEditor/Assets/Scenes/: Default.limn  Example.limn  ExampleColors.limn  ExampleOrbital.limn  ExampleRotated.limn  IDTest.limn  debugAcceleration.limn  debugLsp.limn  debugLspResize.limn  debugOrbitRender.limn  debugPhysicsQueries-lite.limn  debugPhysicsQueries.limn  debugScripts.Limn  debugScripts2.Limn  testJovian.Limn
LimnovaEditor/Assets/shaders/: AttrColor.lvglsl  FlatColor.lvglsl  Hyperbola.lvglsl
LimnovaEditor/NativeScripts/: CameraScripts.h
LimnovaEditor/Panels/: AssetBrowserPanel.cpp  AssetBrowserPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
LimnovaEditor/Resources/: imgui.ini
LimnovaEditor/Resources/NativeScripts/: CameraScripts.h
LimnovaScriptCore/: CMakeLists.txt
LimnovaScriptCore/Source/: Input.cs  Main.cs  Math.cs  Missile.cs  Native.cs  Player.cs  Ship.cs
LimnovaScriptCore/Source/Scene/: Components.cs  Entity.cs  EntityReference.cs
Orbital/: CMakeLists.txt  Orbital2D.cpp  Orbital2D.h  OrbitalApp.cpp  OrbitalLayer.cpp  OrbitalLayer.h  OrbitalPhysics.h  OrbitalPhysics2D.cpp  OrbitalPhysics2D.h  OrbitalScene.cpp  OrbitalScene.h
Orbital/Entities/: Entity.cpp  Orbiter.cpp  Orbiter.h
OrbitalPhysics/: CMakeLists.txt
OrbitalPhysics/include/Math/: Math.h  MathConstants.h  Matrix4.h  Quaternion.h  Vector3.h
OrbitalPhysics/include/OrbitalPhysics/: OrbitalPhysics.h
OrbitalPhysics/include/Util/: Format.h  Log.h  NTree.h  Storage.h  Util.h
OrbitalPhysics/source/: OrbitalPhysics.cpp
OrbitalPhysics/source/Math/: Math.cpp  Matrix4.cpp  Quaternion.cpp
OrbitalPhysics/source/Test/: Main.cpp
PlayApp/: CMakeLists.txt  Orbiters2D.h  Play2DLayer.cpp  Play2DLayer.h  PlayApp.cpp  TestLayer.cpp  TestLayer.h
PlayApp/Entities/: Entity.h
Profiling/: Limnova-Profile-Shutdown.json  Limnova-Profile-Startup.json
(+2 files in other folders)
